--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -36,11 +36,12 @@ hr.star-dark:after {
   font-size: 2em; }
 
 hr.star-light {
-  border-color: #fff; }
+  border-color: #fff;
+    background-color: #2C3E50; }
 
 hr.star-light:after {
   color: #fff;
-  background-color: #18BC9C; }
+  background-color: #2C3E50; }
 
 hr.star-dark {
   border-color: #2C3E50; }
@@ -93,11 +94,11 @@ section {
     #mainNav .navbar-nav li.nav-item a.nav-link {
       color: #fff; }
       #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-        color: #18BC9C; }
+        color: #ff5d00; }
       #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
         color: #fff; }
       #mainNav .navbar-nav li.nav-item a.nav-link.active {
-        color: #18BC9C; }
+        color: #ff5d00; }
   #mainNav .navbar-toggler {
     font-size: 80%;
     padding: 0.8rem; }
@@ -118,10 +119,10 @@ section {
       margin-top: 0; }
     #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
       color: #fff;
-      background: #18BC9C; }
+      background: #ff5d00; }
       #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
         color: #fff;
-        background: #18BC9C; }
+        background: #ff5d00; }
   #mainNav.navbar-shrink {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem; }
@@ -160,9 +161,9 @@ header.masthead {
       -moz-transition: all ease 0.5s;
       transition: all ease 0.5s;
       opacity: 0;
-      background-color: rgba(24, 188, 156, 0.9); }
+      background-color: rgba(100, 36.5, 0, 0.9); }
       .portfolio .portfolio-item .portfolio-item-caption:hover {
-        opacity: 1; }
+        opacity: 1; background-color: #ff5d00}
       .portfolio .portfolio-item .portfolio-item-caption .portfolio-item-caption-content {
         font-size: 1.5rem; }
   @media (min-width: 576px) {
@@ -236,7 +237,7 @@ header.masthead {
   opacity: 1; }
 
 .floating-label-form-group-with-focus label {
-  color: #18BC9C; }
+  color: #ff5d00; }
 
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #e9ecef; }
@@ -251,31 +252,31 @@ form .row:first-child .floating-label-form-group {
   background-color: #1a252f; }
 
 a {
-  color: #18BC9C; }
+  color: #ff5d00; }
   a:focus, a:hover, a:active {
-    color: #128f76; }
+    color: #ff5d00; }
 
 .btn {
   border-width: 2px; }
 
 .bg-primary {
-  background-color: #18BC9C !important; }
+  background-color: #ff5d00 !important; }
 
 .bg-secondary {
   background-color: #2C3E50 !important; }
 
 .text-primary {
-  color: #18BC9C !important; }
+  color: #ff5d00 !important; }
 
 .text-secondary {
   color: #2C3E50 !important; }
 
 .btn-primary {
-  background-color: #18BC9C;
-  border-color: #18BC9C; }
+  background-color: #ff5d00;
+  border-color: #ff5d00; }
   .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-    background-color: #128f76;
-    border-color: #128f76; }
+    background-color: #ff5d00;
+    border-color: #ff5d00; }
 
 .btn-secondary {
   background-color: #2C3E50;
