--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ body a:focus {
     -o-background-size: cover;
     -moz-background-size: cover;
     -ms-background-size: cover;
-   
+
 }
 .banner-text {
     padding: 16em 0;
@@ -1099,7 +1099,7 @@ ul.w3-links li a i.fa:hover {
 
 /* -- Responsive code -- */
 @media screen and (max-width: 1600px){
-    
+
 }
 @media screen and (max-width: 1440px){}
 @media screen and (max-width: 1366px){}
@@ -1246,7 +1246,7 @@ ul.w3-links li a i.fa:hover {
     }
 }
 @media screen and (max-width: 736px){
-    
+
     .banner-text {
         padding: 8.5em 0;
     }
@@ -1337,7 +1337,7 @@ ul.w3-links li a i.fa:hover {
     .nav-tabs {
         width: 82%;
     }
-    
+
 }
 @media screen and (max-width: 568px){
     .services-w3ls-row.agileits-w3layouts.service1, .services- w3ls-row.agileits-w3layouts.service4, .services-grid.agileits-w3layouts.service2 {
@@ -1567,4 +1567,62 @@ ul.w3-links li a i.fa:hover {
          right: 7%;
     }
 }
+
+
+
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+img {
+  max-width:100%;
+}
+
+
+
+.card-grid {
+  width:100%;
+}
+.card-grid:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+
+.card-wrap {
+
+  float:left;
+  width:100%;
+  padding:5px;
+}
+@media (min-width: 500px) {
+  .card-wrap {
+    width:50%;
+  }
+}
+@media (min-width: 720px) {
+  .card-wrap {
+    width:25%;
+  }
+}
+
+
+.card {
+  background-color:white;
+  border-radius:5px;
+  border:1px solid #ccc;
+  border-bottom:2px solid #ccc;
+}
+.card > div {
+  padding:0 1em;
+}
+
+.agile-gallery-info{
+  height:70px;
+}
+
 /* -- //Responsive code -- */
