css for responsive video

--- a/css/style.css
+++ b/css/style.css
@@ -1624,5 +1624,18 @@ img {
 .agile-gallery-info{
   height:70px;
 }
+.video-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.video-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
 
 /* -- //Responsive code -- */
