--- a/styles/education.css
+++ b/styles/education.css
@@ -630,7 +630,7 @@ section
 .main_title_container
 {
 	width: 100%;
-	height: 183px;
+	height: 130px;
 }
 .main_subtitle
 {
@@ -645,14 +645,15 @@ section
 	font-weight: 800;
 	color: #100f3a;
 	line-height: 0.75;
-	margin-top: 15px;
+	margin-top: 30px;
 	margin-left: -4px;
+	margin-bottom: 50px;
 }
 .main_content_scroll
 {
-	margin-top: 125px;
-	max-height: calc(100% - 183px - 125px);
-	padding-right: 100px;
+	margin-top: 25px;
+	max-height: calc(100% - 30px );
+	padding-right: 60px;
 }
 .mCS-minimal.mCSB_scrollTools .mCSB_draggerRail, .mCS-minimal-dark.mCSB_scrollTools .mCSB_draggerRail
 {
@@ -736,4 +737,31 @@ section
 {
 	margin-top: 18px;
 	padding-left: 2px;
+}
+.proj_title
+{
+	font-size: 60px;
+	font-weight: 700;
+	color: #100f3a;
+	line-height: 1.2;
+	padding-bottom: 40px;
+}
+.video-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    max-width: 1000px;
+    max-height: 563px;
+}
+
+.video-responsive  iframe {
+    position: absolute;
+    top: 0;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    max-width: 1000px;
+    max-height: 563px;
 }
