--- a/styles/education.css
+++ b/styles/education.css
@@ -630,7 +630,7 @@ section
 .main_title_container
 {
 	width: 100%;
-	height: 183px;
+	height: 130px;
 }
 .main_subtitle
 {
@@ -645,14 +645,15 @@ section
 	font-weight: 800;
 	color: #100f3a;
 	line-height: 0.75;
-	margin-top: 15px;
+	margin-top: 30px;
 	margin-left: -4px;
+	margin-bottom: 50px;
 }
 .main_content_scroll
 {
-	margin-top: 125px;
-	max-height: calc(100% - 183px - 125px);
-	padding-right: 100px;
+	margin-top: 25px;
+	max-height: calc(100% - 30px );
+	padding-right: 60px;
 }
 .mCS-minimal.mCSB_scrollTools .mCSB_draggerRail, .mCS-minimal-dark.mCSB_scrollTools .mCSB_draggerRail
 {
