--- a/styles/education.css
+++ b/styles/education.css
@@ -738,3 +738,15 @@ section
 	margin-top: 18px;
 	padding-left: 2px;
 }
+
+
+.proj_title
+{
+	font-size: 60px;
+	font-weight: 800;
+	color: #100f3a;
+	line-height: 1.0;
+	margin-top: 30px;
+	margin-left: 0px;
+	margin-bottom: 50px;
+}
